tests/reference/run-scalar_allocation_check_02-b6aed2a.stderr
runtime error: Attempting to deallocate unallocated variable 'var'
  --> tests/errors/scalar_allocation_check_02.f90:10:16
   |
10 |     deallocate(var)
   |                ^^^ Cannot deallocate 'var' because it is not allocated
